tests/baselines/reference/tsxNoJsx.errors.txt
tests/cases/conformance/jsx/tsxNoJsx.tsx(3,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxNoJsx.tsx(3,2): error TS2304: Cannot find name 'nope'.


==== tests/cases/conformance/jsx/tsxNoJsx.tsx (2 errors) ====
    /// @jsx: preserve
    
    <nope />;
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~~
!!! error TS2304: Cannot find name 'nope'.
    